force-app/main/default/objects/Participant_Workflow_Outcome__mdt/Participant_Workflow_Outcome__mdt.object-meta.xml
<CustomObject>
    <label>Participant Workflow Outcome</label>
    <pluralLabel>Participant Workflow Outcomes</pluralLabel>
</CustomObject>