force-app/main/default/objects/Participant_Workflow_Outcome__mdt/fields/Condition_for_Auto_Update__c.field-meta.xml
<CustomField>
    <fullName>Condition_for_Auto_Update__c</fullName>
    <label>Condition for Auto Update</label>
    <length>255</length>
    <type>Text</type>
</CustomField>