force-app/main/default/objects/Participant_Workflow_Outcome__mdt/fields/Disclaimer_if_Current__c.field-meta.xml
<CustomField>
    <fullName>Disclaimer_if_Current__c</fullName>
    <label>Disclaimer if Current</label>
    <length>255</length>
    <type>Text</type>
</CustomField>