force-app/main/default/objects/Participant_Workflow_Outcome__mdt/fields/Readonly_if_Current__c.field-meta.xml
<CustomField>
    <fullName>Readonly_if_Current__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Readonly if Current</label>
    <type>Checkbox</type>
</CustomField>