force-app/main/default/objects/Participant_Workflow_Outcome__mdt/fields/Reasons_List__c.field-meta.xml
<CustomField>
    <fullName>Reasons_List__c</fullName>
    <label>Reasons List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>