force-app/main/default/objects/Participant_Workflow_Outcome__mdt/fields/Show_Only_If_Selected__c.field-meta.xml
<CustomField>
    <fullName>Show_Only_If_Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Only If Selected</label>
    <type>Checkbox</type>
</CustomField>