force-app/main/default/objects/Participant_Workflow_Outcome__mdt/fields/Suppress_Multiple__c.field-meta.xml
<CustomField>
    <fullName>Suppress_Multiple__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suppress Multiple</label>
    <type>Checkbox</type>
</CustomField>